--- a/views/host.slim
+++ b/views/host.slim
@@ -10,7 +10,7 @@
     input type="text" list="cities" name="city" placeholder="Miasto" autofocus=true
     datalist id="cities"
       option Wrocław
-      option Warszaw
+      option Warszawa
       option Kraków
       option Poznań
       option Białystok
